@@ -24,9 +24,9 @@ body {
 }
 
 .draft {
-    background-image: url("../images/watermark-draft.png");
-    background-position: center;
-    background-repeat: repeat-y;
+	background-image: url("../images/watermark-draft.png");
+	background-position: center;
+	background-repeat: repeat-y;
 }
 
 header {
@@ -580,67 +580,67 @@ div.authorgroup.contrib {
 }
 
 .screen * {
-    font-weight: normal;
+	font-weight: normal;
 }
 
 
 .perl_Alert {
-    color: #0000FF;
+	color: #0000FF;
 }
 .perl_BaseN {
-    color: #007F00;
+	color: #007F00;
 }
 .perl_BString {
-    color: #5C3566;
+	color: #5C3566;
 }
 .perl_Char {
-    color: #FF00FF;
+	color: #FF00FF;
 }
 .perl_Comment {
-    color: #888888;
+	color: #888888;
 }
 .perl_DataType {
-    color: #0000FF;
+	color: #0000FF;
 }
 .perl_DecVal {
-    color: #00007F;
+	color: #00007F;
 }
 .perl_Error {
-    color: #FF0000;
+	color: #FF0000;
 }
 .perl_Float {
-    color: #00007F;
+	color: #00007F;
 }
 .perl_Function {
-    color: #007F00;
+	color: #007F00;
 }
 .perl_IString {
-    color: #5C3566;
+	color: #5C3566;
 }
 .perl_Keyword {
-    color: brown;
-    font-weight: bold;
+	color: brown;
+	font-weight: bold;
 }
 .perl_Operator {
-    color: #FFA500;
+	color: #FFA500;
 }
 .perl_Others {
-    color: green;
+	color: green;
 }
 .perl_RegionMarker {
-    color: #96B9FF;
+	color: #96B9FF;
 }
 .perl_Reserved {
-    color: #9B30FF;
+	color: #9B30FF;
 }
 .perl_String {
-    color: #ff00ff;
+	color: #ff00ff;
 }
 .perl_Variable {
-    color: #0000FF;
+	color: #0000FF;
 }
 .perl_Warning {
-    color: #0000FF;
+	color: #0000FF;
 }
 
 /* revisionflag */
@@ -662,3 +662,6 @@ span.remark {
 	background-color: #ff00ff;
 }
 
+iframe {
+	border: none;
+}
